--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -203,3 +203,17 @@ pre {
         }
     }
 }
+
+
+
+/**
+ * Custom Classes
+ */
+.table-bordered {
+    border-collapse: collapse;
+
+    > table, td, th {
+        border: 1px solid black;
+		padding: 5px;
+    }
+}
